--- a/index.html
+++ b/index.html
@@ -18,5 +18,19 @@
 		<h1>disBiz<span>.co</span></h1>
 		<p>disBiz is a website encouraging <br>disabled entrepreneurs to thrive.</p>
 		
+		
+		
+		<script type="text/javascript">
+<!-- Begin
+user = "andy";
+domain = "imsofunky.com";
+document.write('E-mail: <a href=\"mailto:' + user + '@' + domain + '\">' + user + '@' + domain + '</a>');
+// End -->
+</script>
+<noscript>put image of email address here</noscript>
+		
+		
+		
+		
 	</body>
 </html>
