--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 			span{display: inline-block; padding-left:6pt; font-size:20pt;letter-spacing: 1pt;}
 		</style>
 		<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/aileron" type="text/css"/>
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-56777723-23"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-56777723-23');
+</script>
+
+
+		
 	</head>
 
 	<body>
