updated background colour

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>disBiz</title>
 		<style>
-			body{font-family: 'AileronHeavy'; font-weight:bold; font-style:normal; background-color: #7a38f0; color: #fff;text-align: center;margin: 15% auto;}
+			body{font-family: 'AileronHeavy'; font-weight:bold; font-style:normal; background-color:#8031A7; color: #fff;text-align: center;margin: 15% auto;}
 			h1{ font-size:70pt; letter-spacing: -4pt;}
 			p{ font-size:20pt; letter-spacing: 1.6pt;}
 			span{display: inline-block; padding-left:6pt; font-size:20pt;letter-spacing: 1pt;}
