updated link color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			h1{ font-size:70pt; letter-spacing: -4pt;}
 			p{ font-size:20pt; letter-spacing: 1.6pt;}
 			span{display: inline-block; padding-left:6pt; font-size:20pt;letter-spacing: 1pt;}
+			a{color:#000;}
 		</style>
 		<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/aileron" type="text/css"/>
 		
